syntax = "proto3";

package data;

option go_package = "./proto";

// Data service definition
service DataService {
  rpc GetUsers(Empty) returns (UsersResponse);
}

// Empty request message
message Empty {}

// User message matching the JSON structure
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string city = 5;
  bool active = 6;
}

// Metadata message
message Metadata {
  string generatedAt = 1;
  double targetSizeMB = 2;
  int32 estimatedItems = 3;
  double actualSizeMB = 4;
  int32 actualItems = 5;
}

// Response containing users and metadata
message UsersResponse {
  Metadata metadata = 1;
  repeated User users = 2;
}
